--- a/example/src/docs/overview.mdx
+++ b/example/src/docs/overview.mdx
@@ -18,7 +18,7 @@ One could argue that node editors have become a standard for visual logic editin
 
 <br/>
 <FlexRow center>
-  <img src="/public/img/example_editors.png" alt="A grid of node editor screenshots including, Blender, Unreal Engine, Substance Designer, and GoDot" style={{maxWidth: 800}} />
+  <img src="/public/img/example_editors.png" alt="A grid of node editor screenshots including, Blender, Unreal Engine, Substance Designer, and GoDot" style={{maxWidth: 800, width: '100%'}} />
 </FlexRow>
 
 ## Logic Extraction
