--- a/example/src/docs/type-safety.mdx
+++ b/example/src/docs/type-safety.mdx
@@ -32,7 +32,7 @@ Port types are a key component of Flume, and define how your nodes are allowed t
 
 <br/>
 <FlexRow center>
-  <img src="/public/img/valid_port_types.png" alt="A flume grid showing a true/false node and a text node connected successfully to a text switch node." style={{maxWidth: 800}} />
+  <img src="/public/img/valid_port_types.png" alt="A flume grid showing a true/false node and a text node connected successfully to a text switch node." style={{maxWidth: 800, width: '100%'}} />
 </FlexRow>
 <br/>
 
