Adds basic Docusaurus template

--- a/docs/docs/overview.mdx
+++ b/docs/docs/overview.mdx
@@ -1,12 +1,7 @@
 ---
-name: Overview
-route: /docs/
-menu: Concepts
+title: Overview
+id: overview
 ---
-
-import FlexRow from './components/FlexRow'
-
-# Overview
 
 ## The Problem
 
@@ -16,10 +11,7 @@ As most apps grow and mature, developers are often faced with an important probl
 
 One could argue that node editors have become a standard for visual logic editing. They allow for a wide variety of logical structures, but also allow developers to define their own "guardrails" to prevent end-users from defining invalid logic. In many applications, node editors have become a common compromise between UI complexity, and full logical expression. Following are just a few examples of node editors found in popular desktop applications (Flume itself is inspired by many of these node-editor implementations).
 
-<br/>
-<FlexRow center>
-  <img src="/public/img/example_editors.png" alt="A grid of node editor screenshots including, Blender, Unreal Engine, Substance Designer, and GoDot" style={{maxWidth: 800, width: '100%'}} />
-</FlexRow>
+![A grid of node editor screenshots including, Blender, Unreal Engine, Substance Designer, and GoDot](/img/example_editors.png)
 
 ## Logic Extraction
 
