--- a/docs/docs/quick-start.mdx
+++ b/docs/docs/quick-start.mdx
@@ -1,9 +1,7 @@
 ---
-name: Getting Started
-route: /docs/getting-started
+title: Quick Start
+id: quick-start
 ---
-
-# Getting Started
 
 ## Installation
 
@@ -25,7 +23,7 @@ To get started, import and render the node editor like so:
 
 ```jsx
 import React from 'react'
-import { NodeEditor } from "node-editor";
+import { NodeEditor } from "flume";
 
 const App = () => {
   const [nodes, setNodes] = React.useState({})
@@ -38,4 +36,4 @@ const App = () => {
 }
 ```
 
-As you may guess, this alone will render only a blank editor grid with no nodes. 
+As you may guess, this alone will render only a blank editor grid with no nodes.
