--- a/docs/docs/quick-start.mdx
+++ b/docs/docs/quick-start.mdx
@@ -26,12 +26,9 @@ import React from 'react'
 import { NodeEditor } from "flume";
 
 const App = () => {
-  const [nodes, setNodes] = React.useState({})
 
   return (
-    <NodeEditor
-      nodes={nodes}
-    />
+    <NodeEditor />
   )
 }
 ```
