Added new styling docs

--- a/docs/docs/theming.mdx
+++ b/docs/docs/theming.mdx
@@ -2,4 +2,58 @@
 title: Theming
 ---
 
-Any quality library which provides a user interface for end-users must be theme-able to match the rest of the application. Flume is no exception to this, and work is underway to provide a stable API for creating node editor themes. Because of the diverse methods that developers use to style their applications, we are working to make sure when this API is released it will be robust and universal. If you are interested in contributing to this feature we would love to hear from you on the [Github issue for this topic](https://github.com/chrisjpatty/flume/issues/18).
+All required styles are automatically included with the `NodeEditor`, but each Flume component has a data attribute that you can target using normal css.
+
+## Example
+
+For example, you can change the background color of the nodes with the following CSS:
+
+```css
+[data-flume-component="node"]{
+  background: #ffffff;
+}
+```
+
+## Reference
+
+The following is a comprehensive list of all available data attributes. Each component name is prefixed with `data-flume-component`.
+
+- `stage`
+- `node`
+- `node-header`
+- `connection-svg`
+- `connection-path`
+- `ports`
+- `ports-inputs`
+- `ports-outputs-`
+- `port-input`
+- `port-output`
+- `port-label`
+- `port-handle`
+- `comment`
+- `comment-textarea`
+- `comment-text`
+- `comment-resize-handle`
+- `control`
+- `control-label`
+- `select`
+- `select-label`
+- `select-desc`
+- `text-input`
+- `text-input-number`
+- `text-input-textarea`
+- `checkbox`
+- `checkbox-label`
+- `color-picker`
+- `color-button`
+- `toast`
+- `toast-title`
+- `toast-message`
+- `toast-close`
+- `ctx-menu`
+- `ctx-menu-header`
+- `ctx-menu-title`
+- `ctx-menu-input`
+- `ctx-menu-list`
+- `ctx-menu-empty`
+- `ctx-menu-option`
